<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".Activity.StartGameActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">


        <LinearLayout
            android:id="@+id/linLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="right">


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_information"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                app:fabCustomSize="60dp"
                android:backgroundTint="@color/white"
                app:srcCompat="@drawable/question"
                tools:ignore="VectorDrawableCompat" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_music_control"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:layout_marginStart="10dp"
                android:backgroundTint="@color/white"
                app:fabCustomSize="60dp"
                app:srcCompat="@drawable/speaker"
                tools:ignore="VectorDrawableCompat"
                android:layout_marginLeft="10dp" />

        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:layout_marginTop="110dp"
        android:layout_below="@id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:layout_marginRight="10dp"
        android:text="@string/your_information"
        android:textSize="30sp"
        android:textColor="@color/redfixed"
        android:id="@+id/yourInformation"
        android:layout_marginEnd="10dp" />

    <View
        android:layout_marginTop="5dp"
        android:id="@+id/view"
        android:layout_below="@id/yourInformation"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@color/red"
        android:layout_marginBottom="30dp"
        android:padding="20sp">
    </View>

    <androidx.cardview.widget.CardView
        android:id="@+id/nameCardView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/view"
        android:layout_marginTop="30dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusableInTouchMode="false"
            android:padding="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/star"
                android:layout_marginRight="5dp"
                android:textColor="#DD0202"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp" />

            <EditText
                android:inputType="text"
                android:background="@drawable/border"
                android:id="@+id/nameEdittext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_below="@id/nameCardView"
        android:id="@+id/ageCardView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusableInTouchMode="false"
            android:padding="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/star"
                android:layout_marginRight="5dp"
                android:textColor="#DD0202"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp" />

            <Spinner
                android:background="@drawable/border"
                android:id="@+id/ageSpinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:entries="@array/age_entries" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_below="@id/ageCardView"
        android:id="@+id/schoolCardView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusableInTouchMode="false"
            android:padding="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/star"
                android:layout_marginRight="5dp"
                android:textColor="#DD0202"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/school"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp" />

            <EditText
                android:inputType="text"
                android:background="@drawable/border"
                android:id="@+id/schoolEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_below="@id/schoolCardView"
        android:id="@+id/districtCardView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusableInTouchMode="false"
            android:padding="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/star"
                android:layout_marginRight="5dp"
                android:textColor="#DD0202"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/district"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_marginRight="30dp"
                android:layout_marginEnd="30dp" />

            <Spinner
                android:background="@drawable/border"
                android:id="@+id/districtSpinner"
                android:layout_width="160dp"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:entries="@array/district_entries"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/linerarLayout1"
        android:layout_below="@id/districtCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_marginTop="15dp"
        android:gravity="center|bottom">


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_start"
            android:layout_width="wrap_content"
            android:layout_height="450dp"
            android:elevation="10dp"
            android:layout_marginTop="20dp"
            app:fabCustomSize="60dp"
            android:backgroundTint="@color/white"
            app:srcCompat="@drawable/ic_play_arrow_black_24dp"
            tools:ignore="VectorDrawableCompat"
            tools:targetApi="lollipop" />

    </LinearLayout>

</RelativeLayout>